objects/Delivery__c.object
<CustomObject>
    <fields>
        <fullName>Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deliveries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Departs_At__c</fullName>
        <label>Departs At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Detailing_Status__c</fullName>
        <label>Detailing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Claimed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Key Ready, Prep Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Find Key or Car</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Is there anything else that the DOS needs to do? (i.e. Does anyone need to sign the 262 besides the buyer?)</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Time_Requested__c</fullName>
        <label>Original Time Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Details__c</fullName>
        <inlineHelpText>What should the DOS know about the sale? (i.e. Customer will be paying with First Tech loan and cashier&apos;s check. Customer will have a $5,000 cashier&apos;s check ready. We should be receiving the First Tech check tomorrow.) If redelivery, type &quot;Redelivery&quot;.</inlineHelpText>
        <label>Payment Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <inlineHelpText>Please include final sale price, tax and registration and total cost. Also include how the customer is paying for the vehicle. (i.e. First Tech loan of $8,000 and cashier&apos;s check of $5,000 minus Square deposit of $500.) If redelivery, type &quot;Redelivery&quot;.</inlineHelpText>
        <label>Payment Method</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scheduled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_For__c</fullName>
        <label>Scheduled For</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Thank_You_Note__c</fullName>
        <label>Thank You Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vehicle_Interest__c</fullName>
        <label>Vehicle Interest</label>
        <referenceTo>Vehicle_Interest__c</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Delivery</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Deliveries_by_last_modified_date</fullName>
        <columns>NAME</columns>
        <columns>Scheduled_For__c</columns>
        <columns>Original_Time_Requested__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Deliveries by last modified date</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Delivery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>